# project-euler-haskell

./: LICENSE  flake.nix  project-euler.cabal
lib/ProjectEuler/: Prime.hs
problems/01-sum-multiple-3-5/: Main.hs
problems/02-sum-of-fib/: Main.hs
problems/04-palindromic-number/: Main.hs
problems/06-sum-square-difference/: Main.hs
problems/09-pythagorean-triplet/: Main.hs
problems/10-sum-of-primes/: Main.hs
problems/12-triangular-numbers/: Main.hs
problems/13-large-sum/: Main.hs
problems/20-factorial-digit-sum/: Main.hs
problems/21-amicable-numbers/: Main.hs
problems/22-name-scores/: Main.hs
problems/23-non-abundant-sums/: Main.hs
problems/24-lexicographic-permutations/: Main.hs
problems/25-n-digit-fibonacci-number/: Main.hs
problems/26-reciprocal-cycles/: Main.hs
problems/27-quadratic-primes/: Main.hs
problems/29-distinct-powers/: Main.hs
problems/3-prime-factor/: Main.hs
problems/30-digit-fifth-powers/: Main.hs
problems/31-coin-sum/: Main.hs
problems/32-pandigital-products/: Main.hs
problems/33-digit-cancelling-fractions/: Main.hs
problems/5-smallest-multiple/: Main.hs
problems/51-prime-digit-replacement/: Main.hs
problems/54-poker/: Main.hs
problems/60-prime-pair-sets/: Main.hs
problems/7-nth-prime/: Main.hs
problems/8-largest-product-in-series/: Main.hs
problems/84-monopoly-odds/: Main.hs
