cabal-version:      3.4
name:               project-euler
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Florian Walter
maintainer:         nairolf.retlaw@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable 1-sum-multiple-3-5
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/1-sum-multiple-3-5
    default-language: GHC2021

executable 2-sum-of-fib
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/2-sum-of-fib
    default-language: GHC2021

executable 3-prime-factor
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/3-prime-factor
    default-language: GHC2021

executable 4-palindromic-number
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/4-palindromic-number
    default-language: GHC2021

executable 5-smallest-multiple
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0, containers ^>=0.7
    hs-source-dirs:   problems/5-smallest-multiple
    default-language: GHC2021

executable 6-sum-square-difference
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/6-sum-square-difference
    default-language: GHC2021

executable 7-nth-prime
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/7-nth-prime
    default-language: GHC2021

executable 8-largest-product-in-series
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/8-largest-product-in-series
    default-language: GHC2021

executable 9-pythagorean-triplet
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/9-pythagorean-triplet
    default-language: GHC2021

executable 13-large-sum
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/13-large-sum
    default-language: GHC2021
