cabal-version:      3.4
name:               project-euler
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Florian Walter
maintainer:         nairolf.retlaw@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable 1-sum-multiple-3-5
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/01-sum-multiple-3-5
    default-language: GHC2021

executable 2-sum-of-fib
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/01-sum-of-fib
    default-language: GHC2021

executable 3-prime-factor
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/01-prime-factor
    default-language: GHC2021

executable 4-palindromic-number
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/01-palindromic-number
    default-language: GHC2021

executable 5-smallest-multiple
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0, containers ^>=0.7
    hs-source-dirs:   problems/01-smallest-multiple
    default-language: GHC2021

executable 6-sum-square-difference
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/01-sum-square-difference
    default-language: GHC2021

executable 7-nth-prime
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/01-nth-prime
    default-language: GHC2021

executable 8-largest-product-in-series
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/01-largest-product-in-series
    default-language: GHC2021

executable 9-pythagorean-triplet
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/09-pythagorean-triplet
    default-language: GHC2021

executable 10-sum-of-primes
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/10-sum-of-primes
    default-language: GHC2021

executable 12-triangular-numbers
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0, integer-roots ^>= 1.0.2.0
    hs-source-dirs:   problems/12-triangular-numbers
    default-language: GHC2021

executable 13-large-sum
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/13-large-sum
    default-language: GHC2021

executable 20-factorial-digit-sum
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/20-factorial-digit-sum
    default-language: GHC2021

executable 21-amicable-numbers
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/21-amicable-numbers
    default-language: GHC2021

executable 22-name-scores
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/22-name-scores
    default-language: GHC2021

executable 23-non-abundant-sums
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/23-non-abundant-sums
    default-language: GHC2021

executable 24-lexicographic-permutations
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/24-lexicographic-permutations
    default-language: GHC2021

executable 25-n-digit-fibonacci-number
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/25-n-digit-fibonacci-number
    default-language: GHC2021

executable 26-reciprocal-cycles
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/26-reciprocal-cycles
    default-language: GHC2021

executable 27-quadratic-primes
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   problems/27-quadratic-primes
    default-language: GHC2021
